- attempted to fix maven test errors by changing updateNote and addNote in SqliteNoteDAO